# ai_core

./: .env.example  .gitignore  README.md  pyproject.toml
ai_core/: __init__.py  client.py  config.py  langchain.py  metadata.py  models.py  observability.py
ai_core/evals/: __init__.py  base.py  builtin.py
tests/: test_langfuse_compat.py  test_smoke.py
