[project]
name = "ai-core"
version = "0.2.0"
description = "Wspólna biblioteka AI: LiteLLM + obserwowalność (Langfuse/Opik) + evaluatory"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.50"]
opik = ["opik>=1.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]
all = ["langfuse>=2.50", "opik>=1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_core"]

[tool.ruff]
line-length = 100
target-version = "py311"
